# portfolio.ksrgte.ch

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: index.html
