[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = [ "rustls" ] }
actix-files = "0.6.2"
rustls = "0.20"
rustls-pemfile = "1.0"
anyhow = "1.0"
log = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
chrono = "0.4"